@@ -1157,7 +1157,7 @@
 	    </span>. </span><span class="publisher"><span class="publishername">
 	  Cambridge University Press
 	. </span></span></p></div><div class="biblioentry"><a id="biblio.mscom"></a><p>[biblio.mscom] <span class="title"><em>
-	<a class="link" href="https://docs.microsoft.com/en-us/windows/desktop/com/the-component-object-model" target="_top">
+	<a class="link" href="https://docs.microsoft.com/en-us/windows/win32/com/the-component-object-model" target="_top">
 	  COM: Component Model Object Technologies
 	</a>
       </em>. </span><span class="publisher"><span class="publishername">
