@@ -1,5 +1,10 @@
 2019-09-02  Jonathan Wakely  <jwakely@redhat.com>
 
+	* doc/xml/manual/abi.xml: Document 9.x library versions.
+	* doc/html/*: Regenerate.
+
+2019-09-02  Jonathan Wakely  <jwakely@redhat.com>
+
 	* include/std/charconv (__detail::__to_chars_2_len): Use std::log2p1.
 	(__detail::__to_chars_8_len): Remove.
 	(__detail::__to_chars_8): Inline length calculation here.
